fix wrong padding on unsortable head in vuetable library

--- a/resources/libraries/Ghivarra/VueTable/style.scss
+++ b/resources/libraries/Ghivarra/VueTable/style.scss
@@ -29,9 +29,13 @@
 
         td,
         th {
-            padding: 8px 30px 8px 10px;
+            padding: 8px 10px;
             text-align: left;
             font-weight: bold;
+
+            &.sortable {
+                padding: 8px 30px 8px 10px;
+            }
         }
     }
 
